--- a/Turn the card/TurnTheCard.html
+++ b/Turn the card/TurnTheCard.html
@@ -9,9 +9,23 @@
 <body>
     <img src="drago-bianco-occhi-blu-back.jpg" alt="" onclick="gira()" width="378px">
     <img src="drago-bianco-occhi-blu-back.jpg" alt="" onclick="scarta()" width="378px" class="front">
+    <img src="drago-bianco-occhi-blu-back.jpg" alt="" onclick="scarta1()" width="378px" class="front1">
+    <img src="drago-bianco-occhi-blu-back.jpg" alt="" onclick="scarta2()" width="378px" class="front2">
+    <img src="drago-bianco-occhi-blu-back.jpg" alt="" onclick="scarta3()" width="378px" class="front3">
+    <img src="drago-bianco-occhi-blu-back.jpg" alt="" onclick="scarta4()" width="378px" class="front4">
+    <img src="drago-bianco-occhi-blu-back.jpg" alt="" onclick="scarta5()" width="378px" class="front5">
+    <img src="drago-bianco-occhi-blu-back.jpg" alt="" onclick="scarta6()" width="378px" class="front6">
+    <img src="drago-bianco-occhi-blu-back.jpg" alt="" onclick="scarta7()" width="378px" class="front7">
     <script>
         let carta = document.querySelector("img")
         let front = document.querySelector(".front")
+        let front1 = document.querySelector(".front1")
+        let front2 = document.querySelector(".front2")
+        let front3 = document.querySelector(".front3")
+        let front4 = document.querySelector(".front4")
+        let front5 = document.querySelector(".front5")
+        let front6 = document.querySelector(".front6")
+        let front7 = document.querySelector(".front7")
         function gira() {
             if (carta.src.includes ("back")) 
                 carta.src = "Drago-bianco-occhi-blu-front.jpg"
@@ -21,6 +35,41 @@
             if (front.src.includes ("back")) 
                 front.src = "secondo-front.jpeg"
             else front.src = "drago-bianco-occhi-blu-back.jpg"        
+        }
+        function scarta1() {
+            if (front1.src.includes ("back")) 
+                front1.src = "terzo-front.jpeg"
+            else front1.src = "drago-bianco-occhi-blu-back.jpg"        
+        }
+        function scarta2() {
+            if (front2.src.includes ("back")) 
+                front2.src = "quarto-front.jpeg"
+            else front2.src = "drago-bianco-occhi-blu-back.jpg"        
+        }
+        function scarta3() {
+            if (front3.src.includes ("back")) 
+                front3.src = "quinto-front.jpeg"
+            else front3.src = "drago-bianco-occhi-blu-back.jpg"        
+        }
+        function scarta4() {
+            if (front4.src.includes ("back")) 
+                front4.src = "sesto-front.jpeg"
+            else front4.src = "drago-bianco-occhi-blu-back.jpg"        
+        }
+        function scarta5() {
+            if (front5.src.includes ("back")) 
+                front5.src = "settimo-front.jpeg"
+            else front5.src = "drago-bianco-occhi-blu-back.jpg"        
+        }
+        function scarta6() {
+            if (front6.src.includes ("back")) 
+                front6.src = "ottavo-front.jpeg"
+            else front6.src = "drago-bianco-occhi-blu-back.jpg"        
+        }
+        function scarta7() {
+            if (front7.src.includes ("back")) 
+                front7.src = "nono.jpeg"
+            else front7.src = "drago-bianco-occhi-blu-back.jpg"        
         }
     </script>
 </body>
