--- a/Turn the card/CardTutorial.html
+++ b/Turn the card/CardTutorial.html
@@ -15,27 +15,47 @@
 </head>
 
 <body>
+    <!-- ciao -->
 
     <div id="tavoloDaGioco"></div>
 
-    <script>
-        carte = ["Drago-bianco-occhi-blu-front.jpg", "secondo-front.jpeg", "terzo-front.jpeg", "quarto-front.jpeg", "quinto-front.jpeg", "sesto-front.jpeg", "settimo-front.jpeg", "ottavo-front.jpeg", "nono.jpeg"]
 
+    <script>
+        carte = ["Drago-bianco-occhi-blu-front.jpg", "Drago-bianco-occhi-blu-front.jpg", "secondo-front.jpeg", "secondo-front.jpeg", "terzo-front.jpeg", "terzo-front.jpeg", "quarto-front.jpeg", "quarto-front.jpeg", "quinto-front.jpeg", "quinto-front.jpeg", "sesto-front.jpeg", "sesto-front.jpeg", "settimo-front.jpeg", "settimo-front.jpeg", "ottavo-front.jpeg", "ottavo-front.jpeg", "nono.jpeg", "nono.jpeg"]
+        let NcarteGirate = 0;
+        let primaCartaGirata = null
         tavolo = document.querySelector('#tavoloDaGioco')
 
         carte.forEach(element => {
-            tavolo.innerHTML += '<img id="'+element+'" src="drago-bianco-occhi-blu-back.jpg" onclick="gira(this)" />'
-            console.log('<img id="'+element+'" src="drago-bianco-occhi-blu-back.jpg" />')
+            tavolo.innerHTML += '<img id="' + element + '" src="drago-bianco-occhi-blu-back.jpg" onclick="gira(this)" />'
+            console.log('<img id="' + element + '" src="drago-bianco-occhi-blu-back.jpg" />')
         });
 
         function gira(carta) {
-            console.log('GIRA')
+            NcarteGirate++
+            console.log(NcarteGirate)
+            carta.src = carta.id
+            if (NcarteGirate == 1)
+                primaCartaGirata = carta
+            else {
+                NcarteGirate = 0
+                if (carta.src == primaCartaGirata.src)
+                    console.log('Bravo +1 punto')
+                else {                
+                console.log('Riprovaci')
+                carta.src = "drago-bianco-occhi-blu-back.jpg"
+                primaCartaGirata.src = "drago-bianco-occhi-blu-back.jpg"
+            }
+
+         }
+            /* console.log('GIRA')
             console.log(carta.src)
             if (carta.src.includes("back"))
                 carta.src = carta.id
-            else
-                carta.src = "drago-bianco-occhi-blu-back.jpg"
-        } 
+            else 
+                carta.src = "drago-bianco-occhi-blu-back.jpg" */
+        }
+
     </script>
 </body>
 
