--- a/Turn the card/CardTutorial.html
+++ b/Turn the card/CardTutorial.html
@@ -95,10 +95,10 @@
             counter.textContent = count;
             // Controllare se il valore di count è uguale al numero totale di coppie di carte
             if (count == 9) {
-            // Creare un elemento p con il testo "Bravo hai vinto!"
+            // Creare un elemento h1 con il testo "Bravo hai vinto!"
             var h1 = document.createElement("h1");
             h1.textContent = "Bravo hai vinto!";
-            // Aggiungere l'elemento p al documento
+            // Aggiungere l'elemento h1 al documento
             document.body.appendChild(h1);
             }
         }
